# esphome-epaper-spectra6-133

./: .clang-format  .editorconfig  .gitignore  .markdownlint.jsonc  .pre-commit-config.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  release-please-config.json  renovate.json  requirements-dev.txt  requirements.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/setup-esphome-env/: action.yml
.github/actions/setup-python-env/: action.yml
.github/instructions/: documentation.instructions.md
.github/workflows/: bencher-pr-closed.yml  bencher-pr.yml  benchmarks-pr.yml  ci.yml  codspeed.yml  esphome-compatibility-full-monthly.yml  esphome-compatibility-monthly.yml  esphome-compatibility-regression.yml  esphome-compatibility-release.yml  esphome-compatibility.yml  lint-pr.yml  release-pr.yml
components/epaper_spectra6_133/: __init__.py  display.py  epaper_spectra6_133.cpp  epaper_spectra6_133.h  epaper_spectra6_133_constants.h  epaper_spectra6_133_controller.cpp  epaper_spectra6_133_controller.h  epaper_spectra6_133_framebuffer.cpp  epaper_spectra6_133_framebuffer.h  epaper_spectra6_133_operation.cpp  epaper_spectra6_133_operation.h  epaper_spectra6_133_transport.cpp  epaper_spectra6_133_transport.h  epaper_spectra6_133_version.h
configs/: clock.yaml  deprecated.yaml  hello-world.yaml  image.yaml  puppet.yaml  secrets.example.yaml  test-sheet.yaml
configs/partitions/: large_app_8mb.csv
docs/boards/: good_display_esp32_133c02.md
scripts/: bootstrap-venv.sh  check-performance-regression.sh  compile-configs.sh  convert_image.py  esphome-versions.py  esphomew  generate-gallery.sh  run-benchmarks.sh  run-host-tests.sh  setup.sh  sync-agent-instructions.sh  validate-configs.sh
tests/: CMakeLists.txt  component_test.cpp  controller_test.cpp  framebuffer_test.cpp  test_display_py.py  test_esphome_versions.py
tests/benchmarks/: framebuffer_benchmark.cpp
tests/support/: esp_err.h  esp_heap_caps.h  esp_log.h  esp_timer.h  transport_stub.cpp  transport_test_support.h
tests/support/driver/: gpio.h  spi_master.h
tests/support/esphome/components/display/: display_buffer.h
tests/support/esphome/components/logger/: logger.h
tests/support/esphome/core/: application.h  color.h  defines.h  log.h
tests/support/freertos/: FreeRTOS.h  task.h
